--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+yarnnpm-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 package-lock.json
